# feedwm

./: .gitignore  LICENCE.txt  Makefile.in  README.md  configure.ac  feedwm.c
examples/: gbence.rb
